--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,6 @@
 /* Import et mise en place police Lato sur les titres */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-h1, h2, h3
-{
-    font-family: 'Lato',sans-serif;
-}
-
 /* Taille du CV en largeur 1160px et centré et background de l'entête et pied de page */
 body
 {
@@ -87,6 +82,7 @@ header
 /* Mise en forme titre Nom Prénom */
 header h1
 {
+    font-family: 'Lato',sans-serif;
     margin:auto;
     font-size: xxx-large;
 }
@@ -95,6 +91,7 @@ header h1
 {
     margin:0.5em;
     font-size: x-large;
+    font-weight: 600;
 }
 /* Mise en forme du bloc de coordonnées */
 address
@@ -131,11 +128,32 @@ a
 /* mise en forme de la partie principale*/
 main
 {
-    display:inline-flex;
-    flex-wrap:nowrap;
+    display:flex;
 }
 /* On défini la taille de la partie profil */
 .profile
 {
-    width:348px;
+    min-width:348px;
+    box-sizing:border-box;
+    padding:2em;
+    padding-left: 3em;
+    background-color: rgba(51, 51, 51, 0.1);
+}
+/* On défini la taille de la partie cv details */
+.cv-details
+{
+    display:flex;
+    width:max-content;
+    flex-direction:column;
+    flex-wrap:wrap;
+    flex-basis:auto;
+    padding:2em;
+    padding-left: 3em;
+}
+
+h2
+{
+    font-family: 'Lato',sans-serif;
+    font-weight: 400;
+    color:#17abb3
 }
