--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,6 @@ header
 {
     display: flex;
     align-items: center;
-    color:white;
     text-align:center;
     height: 240px;
 }
@@ -84,6 +83,7 @@ header h1
 {
     font-family: 'Lato',sans-serif;
     margin:auto;
+    color:white;
     font-size: xxx-large;
 }
 /* Mise en forme du poste recherché */
@@ -91,6 +91,7 @@ header h1
 {
     margin:0.5em;
     font-size: x-large;
+    color:white;
     font-weight: 600;
 }
 /* Mise en forme du bloc de coordonnées */
@@ -110,6 +111,7 @@ address p
     font-size:medium;
     text-align:left;
     margin:auto auto auto 25px;
+    color:white;
 }
 /* Suppression mise en forme des liens */
 a
@@ -120,7 +122,7 @@ a
 /* Taille des icones */
 .head-icon
 {
-    width:15px;
+    width:20px;
 }
 
 
@@ -133,27 +135,77 @@ main
 /* On défini la taille de la partie profil */
 .profile
 {
+    display:flex;
+    flex-direction: column;
     min-width:348px;
     box-sizing:border-box;
     padding:2em;
     padding-left: 3em;
-    background-color: rgba(51, 51, 51, 0.1);
+    background-color: rgba(227, 227, 227, 0.5);
+    justify-content: space-between;
 }
 /* On défini la taille de la partie cv details */
 .cv-details
 {
     display:flex;
-    width:max-content;
     flex-direction:column;
-    flex-wrap:wrap;
-    flex-basis:auto;
     padding:2em;
     padding-left: 3em;
 }
 
+/* Titres du contenu du CV */
 h2
 {
     font-family: 'Lato',sans-serif;
     font-weight: 400;
-    color:#17abb3
+    color:#17abb3;
+    margin-bottom:auto;
+}
+
+/* Partie profil */
+.profile hr
+{
+    width:95%;
+    margin-left: 0;
+}
+/* Mise en forme des compétences */
+.skills-list
+{
+    width:95%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top:1.5em;
+    row-gap:0.5em;
+}
+/* Mise en valeur de la compétence */
+.skills
+{
+    font-weight: bold;
+    width:50%;
+    color:#333333;
+}
+/* Redimenssion des étoiles */
+.skills-level img
+{
+    width:15px;
+    display: inline;
+    padding:0;
+}
+/* Mise en valeur de la langue parlée */
+.language
+{
+    font-weight: bold;
+    width:40%;
+    color:#333333;
+}
+
+/* Mise en forme des listes */
+.profile ul
+{
+    list-style-image: url('/assets/img/square-solid.svg');
+    padding-left: 1em;
+    line-height: 1.5em;
+    margin:auto;
+    margin-top:1.5em;
 }
