--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,8 @@ h2
 {
     width:95%;
     margin-left: 0;
+    border:none;
+    border-top:1px solid #E3E3E3;
 }
 /* Mise en forme des compétences */
 .skills-list
@@ -219,6 +221,12 @@ h2
     flex-direction:column;
     padding:2em 3em;
     padding-left: 3em;
+}
+
+.cv-details hr
+{
+    border:none;
+    border-top:1px solid #E3E3E3;
 }
 
 /*Mise en forme du texte de présentation*/
