--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,11 @@ header
     border-radius: 50%;
     border: white 5px solid;
 }
+/* Ajout de l'effet dynamique demandé */
+.photo img:hover
+{
+    cursor: zoom-in;
+}
 /* Mise en forme du côté droit de l'header */
 .header-contact
 {
@@ -279,9 +284,14 @@ footer
 }
 .social-network--icon
 {
-    width:20px;
+    width:25px;
     margin:0.3em 1em;
     margin-top:2em;
+}
+/* Ajout de l'effet dynamique demandé */
+.social-network--icon:hover
+{
+    opacity:50%;
 }
 footer p
 {
