--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,16 @@ h2
 }
 .item-cv
 {
-    margin:0.5em 0;
+    margin:0.3em 0;
+    padding:0.5em;
+    box-sizing: border-box;
+}
+/* Ajout de l'effet dynamique */
+.item-cv:hover
+{
+    background-color: #E3E3E3;
+    border-left: #17abb3 solid 0.5em;
+    padding-left:1em;
 }
 .item-title
 {
