--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@
 *
 {
     font-family: "Raleway", sans-serif;
+    box-sizing: border-box;
 }
 html
 {
@@ -198,17 +199,21 @@ h2
     font-family: 'Lato',sans-serif;
     font-weight: 400;
     color:#17abb3;
+    padding-bottom:8px; /* AJOUT SUITE CORRECTION */
     margin-bottom:auto;
+    border-bottom: 1px solid #E3E3E3; /* AJOUT SUITE CORRECTION */
 }
 
 /* Partie profil */
-.profile hr
+/*.profile hr
 {
+    
     width:95%;
     margin-left: 0;
     border:none;
     border-top:1px solid #E3E3E3;
-}
+     INACTIF SUITE CORRECTION 
+}*/
 /* Mise en forme des compétences */
 .skills-list
 {
@@ -220,11 +225,17 @@ h2
     row-gap:0.5em;
 }
 /* Mise en valeur de la compétence */
-.skills
+h3 /* La classe skills est maintenant rattaché à un titre h3 */
 {
     font-weight: bold;
-    width:50%;
+    font-family: 'Lato',sans-serif;
+    font-size: medium;
     color:#333333;
+    margin:0;
+}
+.skills
+{
+    width:50%;
 }
 /* Redimenssion des étoiles */
 .skills-level img
@@ -234,9 +245,10 @@ h2
     padding:0;
 }
 /* Mise en valeur de la langue parlée */
-.language
+.language h3 /* Valeur H3 pour les titres */
 {
     font-weight: bold;
+    font-family: 'Lato',sans-serif;
     width:40%;
     color:#333333;
 }
@@ -269,8 +281,8 @@ h2
 
 .cv-details hr
 {
-    border:none;
-    border-top:1px solid #E3E3E3;
+   /* border:none;
+    border-top:1px solid #E3E3E3; INACTIF SUITE CORRECTION */
 }
 
 /*Mise en forme du texte de présentation*/
@@ -308,6 +320,7 @@ h2
 .item-title
 {
     font-weight: bolder;
+    font-family: 'Lato',sans-serif;
     width:85%; /* AJOUT CORRECTION */
 }
 .date
